state flow contact definition

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'cordacademy-template'
 include 'cordacademy-webserver'
 include 'cordacademy-test'
+include 'workflows'
+include 'contracts'
 
