--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
-rootProject.name = 'cordacademy-template'
+rootProject.name = 'Honeycomb'
 include 'cordacademy-webserver'
 include 'cordacademy-test'
 include 'workflows'
 include 'contracts'
+
 
