lock, unlock, issie token and asset flows

--- a/build.gradle
+++ b/build.gradle
@@ -97,9 +97,8 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         projectCordapp {
             deploy = false
         }
-        // TODO : Add cordapp packages to your node deployment configuration; for example...
-        // cordapp project(":my-first-cordapp-contract")
-        // cordapp project(":my-first-cordapp-workflow")
+        cordapp project(":workflows")
+        cordapp project(":contracts")
         rpcUsers = [[user: "guest", "password": "letmein", "permissions": ["ALL"]]]
     }
 
@@ -115,7 +114,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
     }
 
     node {
-        name "O=PartyA,L=London,C=GB"
+        name "O=Buyer,L=London,C=GB"
         p2pPort 10004
         rpcSettings {
             address("localhost:10005")
@@ -124,20 +123,11 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
     }
 
     node {
-        name "O=PartyB,L=New York,C=US"
+        name "O=Seller,L=New York,C=US"
         p2pPort 10008
         rpcSettings {
             address("localhost:10009")
             adminAddress("localhost:10049")
-        }
-    }
-
-    node {
-        name "O=PartyC,L=Paris,C=FR"
-        p2pPort 10012
-        rpcSettings {
-            address("localhost:10013")
-            adminAddress("localhost:10053")
         }
     }
 }
