--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,12 @@ repositories {
     maven { url 'https://jitpack.io' }
     maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda' }
     maven { url 'https://repo.gradle.org/gradle/libs-releases' }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib-dev" }
+    maven { url "https://jitpack.io" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-solutions-releases" }
 }
 
 apply plugin: 'kotlin'
@@ -65,9 +71,8 @@ dependencies {
     cordaCompile "$corda_group:corda-core:$corda_release_version"
 
     // CorDapp Dependencies
-    // TODO : Add cordapp packages to your dependency configuration; for example...
-    // cordapp project(":my-first-cordapp-contract")
-    // cordapp project(":my-first-cordapp-workflow")
+    cordapp project(":workflows:")
+    cordapp project(":contracts:")
 
     // Corda Deployment Dependencies
     cordaCompile "$corda_group:corda:$corda_release_version"
@@ -76,6 +81,10 @@ dependencies {
 
     // Test Dependencies
     testImplementation project(":cordacademy-test")
+
+    cordapp "com.r3.corda.lib.tokens:tokens-contracts:1.0"
+    cordapp "com.r3.corda.lib.tokens:tokens-workflows:1.0"
+    cordapp "com.r3.corda.lib.tokens:tokens-money:1.0"
 }
 
 jar { exclude '**/log4j2*.xml' }
@@ -91,14 +100,20 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
     }
 }
 
-task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
+task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ["jar"]) {
 
+    directory "./build/nodes"
     nodeDefaults {
         projectCordapp {
             deploy = false
         }
-        cordapp project(":workflows")
-        cordapp project(":contracts")
+        cordapp project(":workflows:")
+        cordapp project(":contracts:")
+
+        // Token SDK
+        cordapp "com.r3.corda.lib.tokens:tokens-contracts:1.0"
+        cordapp "com.r3.corda.lib.tokens:tokens-workflows:1.0"
+        cordapp "com.r3.corda.lib.tokens:tokens-money:1.0"
         rpcUsers = [[user: "guest", "password": "letmein", "permissions": ["ALL"]]]
     }
 
