--- a/workflows/build.gradle
+++ b/workflows/build.gradle
@@ -6,9 +6,18 @@ repositories {
     maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda' }
     maven { url 'https://repo.gradle.org/gradle/libs-releases' }
     maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib-dev" }
+    maven { url "https://jitpack.io" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-solutions-releases" }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'net.corda.plugins.cordapp'
+apply plugin: 'net.corda.plugins.cordformation'
+apply plugin: 'net.corda.plugins.quasar-utils'
 
 dependencies {
     // Kotlin Dependencies
