--- a/client/build.gradle
+++ b/client/build.gradle
@@ -5,6 +5,13 @@ repositories {
     maven { url 'https://jitpack.io' }
     maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda' }
     maven { url 'https://repo.gradle.org/gradle/libs-releases' }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-lib-dev" }
+    maven { url "https://jitpack.io" }
+    maven { url "https://ci-artifactory.corda.r3cev.com/artifactory/corda-solutions-releases" }
 }
 
 apply plugin: 'kotlin'
@@ -17,16 +24,19 @@ dependencies {
     implementation "$corda_group:corda-core:$corda_release_version"
     implementation "$corda_group:corda-rpc:$corda_release_version"
 
-    // CorDapp Dependencies
-    // TODO : Add cordapp packages to your dependency configuration; for example...
-    // implementation project(":my-first-cordapp-contract")
-    // implementation project(":my-first-cordapp-workflow")
 
     // Ktor Dependencies
     implementation "$ktor_group:ktor-server-netty:$ktor_version"
     implementation "$ktor_group:ktor-jackson:$ktor_version"
     implementation "$jackson_group:jackson-datatype-jsr310:$jackson_version"
     implementation "$logback_group:logback-classic:$logback_version"
+
+    implementation project(":workflows")
+    implementation project(":contracts")
+
+    implementation "com.r3.corda.lib.tokens:tokens-contracts:1.0"
+    implementation "com.r3.corda.lib.tokens:tokens-workflows:1.0"
+    implementation "com.r3.corda.lib.tokens:tokens-money:1.0"
 }
 
 jar { exclude '**/log4j2*.xml' }
